--- a/themes/pehtheme-hugo/layouts/partials/terms.html
+++ b/themes/pehtheme-hugo/layouts/partials/terms.html
@@ -11,14 +11,15 @@ For a given taxonomy, renders a list of terms assigned to the page.
 {{- $taxonomy := .taxonomy }}
 
 {{- with $page.GetTerms $taxonomy }}
-  {{- $label := (index . 0).Parent.LinkTitle }}
+{{- $label := (index . 0).Parent.LinkTitle }}
 
-    <ul id="taxonomy" class="not-prose flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
+<ul id="taxonomy" class="not-prose flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
 
-      <li class="font-semibold my-4">{{ $label }}:</li>
-      {{- range . }}
-        <li ><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
-      {{- end }}
-    </ul>
+  <li class="font-semibold my-4">{{ $label }}:</li>
+  {{- range . }}
+  <li><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="{{ .RelPermalink }}">{{
+      .LinkTitle }}</a></li>
+  {{- end }}
+</ul>
 
 {{- end }}
